platform-1.11-bootstrap: correct the charts name for hybrid-proxy

--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -20,7 +20,7 @@ annotations:
   app.helm.sh/component: control-plane
   app.helm.sh/name: platform-bootstrap
 dependencies:
-  - name: hybrid-proxyu ver
+  - name: hybrid-proxy
     version: "1.11.*"
     condition: hybrid-proxy.enabled
   - name: resource-set-operator
