--- a/charts/tp-dp-hawk-console/templates/hawkconsole-statefulset.yaml
+++ b/charts/tp-dp-hawk-console/templates/hawkconsole-statefulset.yaml
@@ -32,7 +32,7 @@ spec:
       {{- end }}
       containers:
       - name: {{ include "tp-dp-hawk-console.consts.appName" . }}
-        image: {{ include "tp-dp-hawk-console.image.registry" .}}{{"/"}}{{ include "tp-dp-hawk-console.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag }}
+        image: {{ include "tp-dp-hawk-console.image.registry" .}}{{"/"}}{{ include "tp-dp-hawk-console.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.imageTag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         {{- if .Values.securityContext.dpHawkConsole }}
         securityContext:
@@ -181,9 +181,7 @@ spec:
 {{- end }}
       volumes:
         - name: podlogs
-          hostPath:
-            path: /var/log/pods
-            type: Directory
+          emptyDir: {}
         - name: config-volume
           configMap:
             name: {{ include "tp-dp-hawk-console.consts.appName" . }}-fluentbit-config
