--- a/charts/tp-dp-hawk-console/values.yaml
+++ b/charts/tp-dp-hawk-console/values.yaml
@@ -20,7 +20,7 @@ replicaCount: "1"
 
 image:
   name: hawk-console
-  tag: "1.10.0.7"
+  imageTag: "1.11.0.15"
   pullPolicy: IfNotPresent
 
 nodeSelector:
@@ -59,7 +59,7 @@ global:
         enabled: true
         image:
           name: common-fluentbit
-          tag: 3.1.4
+          tag: 4.0.8
         # Resources
         # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
         resources:
