--- a/charts/bwprovisioner/config/otel/input-tail.conf
+++ b/charts/bwprovisioner/config/otel/input-tail.conf
@@ -7,4 +7,7 @@
     Tag               app.*
     Path              /var/log/pods/*${POD_NAME}*/${CONTAINER_NAME}/*.log
     multiline.parser  docker, cri, multiline-regex
-    Mem_Buf_Limit     5MB
+    Mem_Buf_Limit     30MB
+    Buffer_Chunk_Size 10M
+    Buffer_Max_Size   20M
+    skip_long_lines   Off
