--- a/charts/tp-cp-bw5ce-utilities/charts/bw5ce-utilities/values.yaml
+++ b/charts/tp-cp-bw5ce-utilities/charts/bw5ce-utilities/values.yaml
@@ -11,13 +11,13 @@ image:
   name: infra-container-image-extractor
   registry: ""
   repo: ""
-  tag: 160-distroless
+  tag: 170-distroless
   pullPolicy: IfNotPresent
 
 debug:
   image:
     name: common-distroless-base-debian-debug
-    tag: 12.11
+    tag: 12.12
 
 nameOverride: ""
 
@@ -105,6 +105,14 @@ bwPluginsJobA:
     tags:
       - 1.1.1.v6.1-tci-2.0
     default: 1.1.1.v6.1-tci-2.0
+  tci-bw-plugin-copybook:
+    tags:
+      - 3.6.0.v1.1-tci-2.0
+    default: 3.6.0.v1.1-tci-2.0
+  tci-bw-plugin-mq:
+    tags:
+      - 7.8.0.v19-tci-2.0
+    default: 7.8.0.v19-tci-2.0
 
 bwPluginsJobB:
   tci-bw-plugin-kafka:
@@ -137,6 +145,14 @@ bwPluginsJobC:
     tags:
       - 11.10.0.v7-tci-2.0
     default: 11.10.0.v7-tci-2.0
+  tci-bw-plugin-oracleebs:
+    tags:
+      - 1.3.0.v8.1-tci-2.0
+    default: 1.3.0.v8.1-tci-2.0
+  tci-bw-plugin-workday:
+    tags:
+      - 1.0.0.v15.2-tci-2.0
+    default: 1.0.0.v15.2-tci-2.0
 
 bwAdaptersExtractJob:
   tci-bw-adapter-adfiles:
