--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
@@ -88,7 +88,7 @@ spec:
         - name: SOURCE_DOCKER_IMAGE
           value: "{{ include "bwce-utilities.image.registry" $dot }}{{"/"}}{{ include "bwce-utilities.bwce.image.repository" $dot }}{{"/"}}{{ $image.name }}:{{ $image.tag }}"
         - name: IMAGE_TEMP_DIR
-          value: "/tmp/{{ $image.name }}/"
+          value: "/tmp/{{ $image.name }}/{{ $image.tag }}/"
         - name: SOURCE_DIRS
           value: "{{ $image.path }}"
         - name: TARGET_DIRS
