--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
@@ -11,13 +11,13 @@ image:
   name: infra-container-image-extractor
   registry: ""
   repo: ""
-  tag: 160-distroless
+  tag: 170-distroless
   pullPolicy: IfNotPresent
 
 debug:
   image:
     name: common-distroless-base-debian-debug
-    tag: 12.11
+    tag: 12.12
 
 nameOverride: ""
 
@@ -126,8 +126,8 @@ bwPluginsJobA:
 bwPluginsJobB:
   tci-bw-plugin-salesforce:
     tags:
-      - 6.11.0.v10-tci-2.0
-    default: 6.10.0.v15.0.1-tci-2.0
+      - 6.11.0.v19.1-tci-2.0
+    default: 6.11.0.v19.1-tci-2.0
   tci-bw-plugin-peoplesoft:
     tags:
       - 7.4.0.v19-tci-2.0
@@ -206,8 +206,8 @@ bwPluginsJobD:
     default: 6.1.1.v41.1-tci-2.0
   tci-bw-plugin-dataconversion:
     tags:
-      - 4.8.0.v1-tci-2.0
-    default: 4.8.0.v1-tci-2.0
+      - 4.8.1.v2.2-tci-2.0
+    default: 4.8.1.v2.2-tci-2.0
   tci-bw-plugin-snowflake:
     tags:
       - 6.3.0.v5-tci-2.0
@@ -298,8 +298,8 @@ bwPluginsJobF:
     default: 6.5.1.v5-tci-2.0
   tci-bw-plugin-ftl:
     tags:
-      - 6.7.2.v3-tci-2.0
-    default: 6.7.2.v3-tci-2.0
+      - 6.7.3.v4.3-tci-2.0
+    default: 6.7.3.v4.3-tci-2.0
   tci-bw-plugin-workday:
     tags:
       - 6.0.1.v13.3-tci-2.0
@@ -320,8 +320,8 @@ bwPluginsJobF:
 bwPluginsJobG:
   tci-bw-plugin-s4hanacloud:
     tags:
-      - 6.4.0.v8.1-tci-2.0
-    default: 6.4.0.v8.1-tci-2.0
+      - 6.4.0.v19-tci-2.0
+    default: 6.4.0.v19-tci-2.0
   tci-bw-plugin-bwlx:
     tags:
       - 6.1.4.v24-tci-2.0
@@ -373,6 +373,11 @@ buildtypeImages:
   extract_image: true
   path: /var/lib/bwce/buildtypes
   tag: 6.12.0
+  target_location: bwce/buildtypes
+- name: tp-bwce-buildtype
+  extract_image: true
+  path: /var/lib/bwce/buildtypes
+  tag: 2.10.0-HF4
   target_location: bwce/buildtypes
 
 probes:
