--- a/charts/tp-cp-integration-bw/charts/bw-webserver/values.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/values.yaml
@@ -21,7 +21,7 @@ global:
   fluentbit:
     image:
       name: "common-fluentbit"
-      tag: "4.0.3"
+      tag: "4.0.8"
     probes:
       livenessProbe:
         failureThreshold: 3
@@ -47,7 +47,7 @@ config:
   HTTP_REQUEST_TIMEOUT: "120000"
   IDLE_TIME_SECONDS: "1800"
   WEB_SERVER_LOG_ENABLED: "true"
-  BW_WEBSERVER_IMAGE_TAG: "673"
+  BW_WEBSERVER_IMAGE_TAG: "726" # Update this tag to the latest version
 
 replicaCount: 1
 
