Promote plarform addon eventprocessing basechart for 1.11.0. with GA tag.

--- a/charts/platform-addon-eventprocessing/Chart.yaml
+++ b/charts/platform-addon-eventprocessing/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: platform-addon-eventprocessing
 description: TIBCO Platform chart for BE addon
 type: application
-version: 1.11.0-alpha.4
+version: 1.11.0
 appVersion: "1.11.0"
 keywords:
   - tibco-platform
