platform-base 1.11.0 charts promotion (#316)
* platform-1.11-base promotion

* Platform 1.11: artifactmanager, dp-configure-namespace, dp-core-infrastructure, o11y-service, oauth2-proxy-manifests, tp-dp-monitor-agent, workshop docs & scripts (#311)

* platform-1.11: artifactmanager, dp-configure-namespace, dp-core-infrastructure, o11y-service, oauth2-proxy-manifests, platform-bootstrap, tp-dp-monitor-agent

* platform-1.11: artifactmanager, dp-configure-namespace, dp-core-infrastructure, o11y-service, oauth2-proxy-manifests, platform-bootstrap, tp-dp-monitor-agent

* platform-1.11: workshop docs

* Reverted folder platform-bootstrap to main

* platform-1.11: ha-proxy chart version update

* Publishing Tibco Developer Hub 1.11.0 Charts to public repo. (#312)

* publish bw and flogo charts for 1.11 release (#318)

* publish tp-cp-recipes and integration for bw and flogo 1.11 release (#319)

* publish tp-cp-recipes and integration for bw and flogo 1.11 release

* Msgdp pub 1.11.0.15 (#317)

* promote-cp-proxy: update chart version and values (#320)

* promote o11y-charts (#321)

* platform-1.11-base: promote 1.11.0

---------

Co-authored-by: Subrat kumar gantayat <66821171+sgantaya@users.noreply.github.com>
Co-authored-by: Abhijit Wakchaure <49677669+awakchau-tibco@users.noreply.github.com>
Co-authored-by: Chandler Moeller <69922221+cmoeller-tibco@users.noreply.github.com>

--- a/charts/platform-base/Chart.yaml
+++ b/charts/platform-base/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-base
 description: TIBCO Platform base chart
 type: application
-version: 1.10.0
-appVersion: "1.10.0"
+version: 1.11.0
+appVersion: "1.11.0"
 keywords:
   - tibco-platform
   - platform
@@ -19,54 +19,54 @@ annotations:
   app.helm.sh/name: platform-base
 dependencies:
   - name: tp-cp-infra
-    version: "1.10.*"
+    version: "1.11.*"
     condition: tp-cp-infra.enabled
   - name: tp-cp-o11y
-    version: "1.10.*"
+    version: "1.11.*"
     condition: tp-cp-o11y.enabled
   - name: tp-cp-configuration
-    version: "1.10.*"
+    version: "1.11.*"
   - name: tp-cp-recipes
-    version: "1.10.18"
+    version: "1.11.20"
     repository: alias:tibco-platform
     condition: tp-cp-recipes.enabled
   - name: tp-cp-core
-    version: "1.10.*"
+    version: "1.11.*"
   - name: tp-cp-core-ops
-    version: "1.10.*"
+    version: "1.11.*"
   - name: tp-cp-core-finops
-    version: "1.10.*"
+    version: "1.11.*"
   - name: tp-cp-integration
-    version: "1.10.32"
+    version: "1.11.30"
     repository: alias:tibco-platform
     condition: tp-cp-integration.enabled
     tags:
       - integration
   - name: tp-cp-tibcohub-contrib
-    version: "1.10.1"
+    version: "1.11.1"
     repository: alias:tibco-platform
     condition: tp-cp-tibcohub-contrib.enabled
-  - name: platform-cp-messaging
-    version: "1.10.8"
+  - name: tibco-cp-messaging
+    version: "1.11.15"
     repository: alias:tibco-platform
-    condition: platform-cp-messaging.enabled
+    condition: tibco-cp-messaging.enabled
   - name: tp-cp-hawk
-    version: "1.10.7"
+    version: "1.11.15"
     repository: alias:tibco-platform
     condition: tp-cp-hawk.enabled
   - name: tp-cp-hawk-console-recipes
-    version: "1.10.7"
+    version: "1.11.15"
     repository: alias:tibco-platform
     condition: tp-cp-hawk-recipes.enabled
   - name: tp-cp-cli
-    version: "1.1.1"
+    version: "1.2.0"
     condition: tp-cp-cli.enabled
   - name: tp-cp-alertmanager
-    version: "1.9.*"
+    version: "1.11.*"
   - name: tp-cp-prometheus
-    version: "1.10.10"
+    version: "1.11.*"
   - name: dp-oauth2proxy-recipes
-    version: "1.10.*"
+    version: "1.11.*"
   - name: tp-cp-auditsafe
-    version: "1.10.*"
+    version: "1.11.*"
     condition: tp-cp-auditsafe.enabled
