platform-1.12-bootstrap: promote platform-bootstrap chart

--- a/charts/platform-bootstrap/values.yaml
+++ b/charts/platform-bootstrap/values.yaml
@@ -59,7 +59,7 @@ resource-set-operator:
 
 otel-collector:
   # switch to true to enable otel-collector
-  enabled: true
+  enabled: false
   # Resource values for production-like setup
   # requests: Minimum amount of resources required for the application to run.
   # limits: Maximum amount of resources the application can use.
