promote artifact manager, dp-core-infrstructure, o11y-service, on-premises-third-party charts

--- a/charts/o11y-service/templates/configmap.yaml
+++ b/charts/o11y-service/templates/configmap.yaml
@@ -94,9 +94,9 @@ data:
   {{- end }}
   {{- end }}
   {{- if .Values.global.cp.enableClusterScopedPerm }}
-  {{- $appLogProc = "'[k8sattributes/general, filter/userapp, transform/logs, memory_limiter, batch]'" -}}
+  {{- $appLogProc = "'[k8sattributes/general, transform/logs, filter/userapp, memory_limiter, batch]'" -}}
   {{- else }}
-  {{- $appLogProc = "'[k8sattributes/general-ns, filter/userapp, transform/logs, memory_limiter, batch]'" -}}
+  {{- $appLogProc = "'[k8sattributes/general-ns, transform/logs, filter/userapp, memory_limiter, batch]'" -}}
   {{- end }}
 {{- end }}
 ##logsserver:userapp secondary exporter
