--- a/charts/platform-base/charts/tp-cp-core/Chart.yaml
+++ b/charts/platform-base/charts/tp-cp-core/Chart.yaml
@@ -1,27 +1,27 @@
 apiVersion: v2
-appVersion: 1.11.0
+appVersion: 1.12.0
 dependencies:
 - condition: web-server.enabled
   name: web-server
-  version: 1.11.28
+  version: 1.12.7
 - condition: orchestrator.enabled
   name: orchestrator
-  version: 1.11.15
+  version: 1.12.*
 - condition: user-subscriptions.enabled
   name: user-subscriptions
-  version: 1.11.4
+  version: 1.11.3
 - condition: cronjobs.enabled
   name: cronjobs
-  version: 1.11.3
+  version: 1.12.1
 - condition: identity-management.enabled
   name: identity-management
-  version: 1.11.8
+  version: 1.12.4
 - condition: identity-provider.enabled
   name: identity-provider
-  version: 1.11.10
+  version: 1.12.1
 - condition: pengine.enabled
   name: pengine
-  version: 1.11.4
+  version: 1.12.1
 description: A Helm chart for -- tp-cp-core
 name: tp-cp-core
-version: 1.11.57
+version: 1.12.16
