--- a/charts/platform-base/charts/tp-cp-o11y/templates/o11y.yaml
+++ b/charts/platform-base/charts/tp-cp-o11y/templates/o11y.yaml
@@ -15,7 +15,7 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.11.0",
+      "capabilityVersion": "1.12.0",
       "minCPVersion": "1.2.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.o11y.default.releaseDate | quote }},
@@ -447,6 +447,9 @@ data:
                            - role: service
                              namespaces:
                                names: ${env:app_namespaces}
+                           metric_relabel_configs:
+                           - action: labeldrop
+                             regex: "ServerState"
                            relabel_configs:
                            - action: keep
                              source_labels: [__meta_kubernetes_service_label_platform_tibco_com_scrape_o11y]
@@ -496,6 +499,14 @@ data:
                            file_sd_configs:
                            - files:
                              - /conf/hawkconsole/hawktargets.yml
+                           metric_relabel_configs:
+                           # Keep only specific metrics related to BW5 on-prem metrics
+                           - action: keep
+                             source_labels: [__name__]
+                             regex: "(hawk_trao11y_getserviceinstancesdetails_statecode|hawk_trao11y_onnewstatusorcmd_cpu_percent|hawk_trao11y_onnewstatusorcmd_cpu_total|hawk_trao11y_onnewstatusorcmd_mem_usage|hawk_bw5o11y_getprocessdefinitions_aborted|hawk_bw5o11y_getprocessdefinitions_completed|hawk_bw5o11y_getprocessdefinitions_created|hawk_bw5o11y_getprocessdefinitions_totalelapsed|hawk_bw5o11y_getprocessdefinitions_totalexecution)"
+                           # Drop labels that are not required for hawkconsole metrics
+                           - action: labeldrop
+                             regex: "(?i)^(agent_os_name|agent_os_version|agent_host_name|agent_ip|agent_name|component_instance|microagent_display_name|microagent_instance|data|out_of_sync|archive_instance|net_host_name|net_host_port|job|url_scheme|http_scheme|instance)$"
                     prometheus/receive:
                       config:
                         scrape_configs:
@@ -523,6 +534,9 @@ data:
                            scrape_interval: 20s
                            kubernetes_sd_configs:
                            - role: service
+                           metric_relabel_configs:
+                           - action: labeldrop
+                             regex: "ServerState"
                            relabel_configs:
                            - action: keep
                              source_labels: [__meta_kubernetes_service_label_platform_tibco_com_scrape_o11y]
@@ -570,6 +584,14 @@ data:
                            file_sd_configs:
                            - files:
                              - /conf/hawkconsole/hawktargets.yml
+                           metric_relabel_configs:
+                           # Keep only specific metrics related to BW5 on-prem metrics
+                           - action: keep
+                             source_labels: [__name__]
+                             regex: "(hawk_trao11y_getserviceinstancesdetails_statecode|hawk_trao11y_onnewstatusorcmd_cpu_percent|hawk_trao11y_onnewstatusorcmd_cpu_total|hawk_trao11y_onnewstatusorcmd_mem_usage|hawk_bw5o11y_getprocessdefinitions_aborted|hawk_bw5o11y_getprocessdefinitions_completed|hawk_bw5o11y_getprocessdefinitions_created|hawk_bw5o11y_getprocessdefinitions_totalelapsed|hawk_bw5o11y_getprocessdefinitions_totalexecution)"
+                           # Drop labels that are not required for hawkconsole metrics
+                           - action: labeldrop
+                             regex: "(?i)^(agent_os_name|agent_os_version|agent_host_name|agent_ip|agent_name|component_instance|microagent_display_name|microagent_instance|data|out_of_sync|archive_instance|net_host_name|net_host_port|job|url_scheme|http_scheme|instance)$"
                   processors:
                     memory_limiter:
                       check_interval: 5s
@@ -957,7 +979,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.11.0"
+          value: "1.12.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
