platform-1.12-charts: promote monitoring agent

--- a/charts/o11y-service/templates/secret-cleanup-hook.yaml
+++ b/charts/o11y-service/templates/secret-cleanup-hook.yaml
@@ -24,6 +24,8 @@ spec:
         {{- include "o11y-service.labels" . | nindent 8 }}
     spec:
       restartPolicy: Never
+      imagePullSecrets:
+      - name: {{ .Values.global.cp.containerRegistry.secret }}
       serviceAccountName: {{ .Values.global.cp.resources.serviceaccount.serviceAccountName }}
       containers:
       - name: secret-cleanup
